<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:divider="@drawable/divider_vertical"
    android:showDividers="middle">

    <group android:id="@+id/group_feature"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_week"
            android:icon="@drawable/ic_menu_week"
            android:title="@string/app_name" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_menu_subjects"
            android:title="@string/subjects" />
        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_menu_grades"
            android:title="@string/grades" />
    </group>

    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings" />
    </group>

</menu>
